--- a/fr/index.html
+++ b/fr/index.html
@@ -1,76 +1,11 @@
-<title>Site de SiniKraft</title>
 <!DOCTYPE html>
 <html>
 <link rel="shortcut icon" type="image/png" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcrafatar.com%2Favatars%2F6d5eecc6-142f-414b-a878-631cb62e91f1.png%3Foverlay%3Dtrue"/>
 <head>
+<title>Site de SiniKraft</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8"/>
-<style>
-footer {
-  width: 99.9%;
-  padding: 0.5px;
-  background-color: #333;
-  color: white;
-  display: block;
-  overflow: hidden;
-  text-decoration: none;
-  font-size: 17px;
-  text-align: center;
-}
-p {
-  color : black;
-}
-
-h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  text-shadow: 0.01em 0.01em 0.2em
-}
-
-body {
-  height: 100%;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background-image : url(../images/bg_home.png);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  text-align: center;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-columns: 100%;
-}
-html, body {
-width: 100%;
-height: 100%;
-margin:0;
-padding:0;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  color: #ffc861;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ffcb6b;
-  color: #bd7b00;
-}
-
-.topnav a.active {
-  background-color: #FFA500;
-  color: white;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="../style.css"/>
 </head>
 <body>
 <div class="container">
