--- a/fr/miel-pops/index.html
+++ b/fr/miel-pops/index.html
@@ -8,94 +8,7 @@ function getUrlParam(parameter, defaultvalue){var urlparameter = defaultvalue;if
 </script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8"/>
-<style>
-.all-projects {
-  padding: 5px;
-  background-color: lightgray;
-  width: 50%;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
-  font-size: 16px;
-}
-
-.all-projects > h1, .project {
-  margin: 10px;
-  padding: 5px;
-}
-
-.project {
-  background: white;
-}
-
-.project > h2, p {
-  margin: 16px;
-  font-size: 90%;
-}
-footer {
-  position: absolute;
-  width: 99.9%;
-  padding: 0.5px;
-  background-color: #333;
-  color: white;
-  display: block;
-  overflow: hidden;
-  text-decoration: none;
-  font-size: 17px;
-  text-align: center;
-}
-p {
-  color : black;
-}
-a {
-  color: #FFA500;
-}
-h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  text-shadow: 0.01em 0.01em 0.2em
-}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background-image : url(../../images/bg_home.png);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  text-align: center;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  color: #ffc861;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ffcb6b;
-  color: #bd7b00;
-}
-
-.topnav a.active {
-  background-color: #FFA500;
-  color: white;
-}
-iframe {
-    width: 50vw; 
-    height: 28.125vw; /* 100/56.25 = 560/315 = 1.778 le tout /2 */
-    background: gray;
-    border: 0.1em solid #FFA500;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="../../style.css"/>
 </head>
 <body>
 
