--- a/fr/index.html
+++ b/fr/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-<div class="topnav">
+<div class="topnav" style="display: flex;">
   <a class="active" href="">Acceuil</a>
   <a href="projets/">Projets</a>
   <a href="miel-pops/">Miel Pops</a>
