--- a/fr/projets/index.html
+++ b/fr/projets/index.html
@@ -1,5 +1,5 @@
-<title>Site de SiniKraft</title>
 <!DOCTYPE html>
+<title>Site de SiniKraft</title>
 <html>
 <link rel="shortcut icon" type="image/png" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcrafatar.com%2Favatars%2F6d5eecc6-142f-414b-a878-631cb62e91f1.png%3Foverlay%3Dtrue"/>
 <head>
@@ -52,7 +52,14 @@
     <a href="https://www.curseforge.com/minecraft/mc-mods/magic-witchcraft/files/all" target="_blank"><article class="all-projects">Téléchargement (curseforge.com)</article></a>
     <br><br><br><br><br><br>
   </article>
-</article></p>
+  <article class="project">
+    <h2>NoMoskito!</h2>
+    <p>NoMoskito! est un jeu dans lequel il faut éclater des moustiques.<br>Encore en développement, vous pouvez quand-même tester les sources !</p>
+    <br>
+    <a href="https://github.com/SiniKraft/NoMoskito/" target="_blank"><article class="all-projects">Source</article></a>
+    <br><br><br><br><br><br>
+  </article>
+</article><span style="font-size: 200px;"><br><br><br><br><br></span></p>
 </div>
 </div>
 </body>
